--- a/KewlChat/Podfile
+++ b/KewlChat/Podfile
@@ -6,6 +6,9 @@ target 'KewlChat' do
 
 	pod 'Alamofire', '~> 3.0'
 
+	pod 'SwiftyJSON', :git => 'https://github.com/SwiftyJSON/SwiftyJSON.git'
+    
+
 
 end
 
